Fixes insufficient colour contrast on select boxes in Windows 10
In Windows 10 on Internet Explorer and Edge selected and active
options in select boxes have a light blue visual treatment.
That differes from other browser vendors' implementation and it
it has a contrast ration 2.9:1 which is not accesible.
By applying microsoft only CSS values  using the GOV.UK
blue this has now been fixed.

--- a/public/sass/elements/_forms.scss
+++ b/public/sass/elements/_forms.scss
@@ -9,6 +9,7 @@
 // 4. Form hints
 // 5. Form controls
 // 6. Form control widths
+// 7. Browser accessibility fixes
 
 // 1. Helpers
 // ==========================================================================
@@ -222,4 +223,14 @@ textarea.form-control {
   @include media(tablet) {
     width: 12.5%;
   }
+}
+
+// 7. Browser accessibility fixes
+// ==========================================================================
+
+option:active,
+option:checked,
+select:focus::-ms-value {
+  color: $white;
+  background-color: $govuk-blue;
 }
